# innerwarden

./: .gitignore  ANCHOR_TESTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  codecov.yml  config.example.toml  deny.toml  install.sh
.github/workflows/: anchor-tests.yml  canary.yml  ci.yml  codecov.yml  codeql.yml  fuzz.yml  heap-budget.yml  release.yml  scorecard.yml  security.yml  verify-lsm-hooks.yml
.specify/features/006-brain-evolution/: spec.md
.specify/features/017-dashboard-operator-ux/: spec.md
.specify/features/018-autonomous-response/: spec.md
.specify/features/019-test-coverage-gaps/: spec.md
.specify/features/020-zero-trust-mdr/: spec.md
.specify/features/024-regression-safety-net/: spec.md
.specify/features/028-incident-lifecycle-bugs/: spec.md
.specify/features/029-ai-capability-router/: spec.md
crates/agent/: Cargo.toml
crates/agent-guard/: Cargo.toml
crates/agent-guard/src/: detect.rs
crates/agent/src/: abuseipdb.rs  abuseipdb_report_budget.rs  agent_context.rs  agent_discovery.rs  attacker_intel.rs  baseline.rs  bot_actions.rs  bot_commands.rs  bot_helpers.rs  briefing.rs  capped_log.rs  circuit_breaker.rs  cloud_safelist.rs  cloudflare.rs  config.rs  correlation_engine.rs  correlation_response.rs  crowdsec.rs  dashboard.rs  data_retention.rs  decision_block_ip.rs  decision_cooldown.rs  decision_honeypot.rs  decision_skill_actions.rs  decisions.rs  defender-brain.json  defender_brain.rs  dna_inline.rs  environment_profile.rs  firmware_tick.rs  geo_cache.rs  geoip.rs  honeypot_always_on.rs  honeypot_post_session.rs  hypervisor_tick.rs  incident_abuseipdb.rs  incident_action_report.rs  incident_advisory.rs  incident_attacker_profile.rs  incident_auto_rules.rs  (+47 more)
crates/agent/src/ai/: anthropic.rs  azure_openai.rs  capability.rs  local_classifier.rs  mod.rs  ollama.rs  openai.rs  router.rs  shadow.rs  stub.rs
crates/agent/src/dashboard/: actions.rs  agent_api.rs  auth.rs  brain.rs  canonical_counts.rs  case_recurrence.rs  compliance.rs  consistency_block_counts.rs  consistency_incidents_today.rs  data_api.rs  fleet.rs  helpers.rs  intelligence.rs  investigation.rs  live_feed.rs  mod.rs  push.rs  sensors.rs  sse.rs  state.rs  types.rs
crates/agent/src/dashboard/frontend/css/: app.css
crates/agent/src/dashboard/frontend/html/: index.html
crates/agent/src/dashboard/frontend/js/: actions.js  api.js  community-banner.js  compliance.js  fleet.js  graph.js  helpers.js  home.js  intel.js  journey.js  nav.js  reports.js  responses.js  sensors.js  sse.js  state.js  status.js  threats.js
crates/agent/src/fleet/: mod.rs  poller.rs
crates/agent/src/knowledge_graph/: buckets.rs  detectors.rs  graph.rs  ingestion.rs  intern.rs  migrations.rs  mod.rs  narrative.rs  persistence.rs  triggers.rs  types.rs
crates/agent/src/loops/: boot.rs  fast_loop.rs  mod.rs  slow_loop.rs
crates/agent/src/process/: incidents.rs  mod.rs  post_decision.rs  telegram_approval.rs
crates/agent/src/skills/: mod.rs
crates/agent/src/skills/builtin/: block_ip_iptables.rs  block_ip_nftables.rs  block_ip_pf.rs  block_ip_ufw.rs  block_ip_xdp.rs  firewall_target.rs  kill_chain_response.rs  mod.rs  monitor_ip.rs
crates/agent/src/skills/builtin/honeypot/: custom_responses.rs  mod.rs  session.rs  ssh_interact.rs
crates/agent/src/telegram/: burst.rs  client.rs  formatting.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: banner.rs  capability.rs  harden.rs  helpers.rs  main.rs  upgrade.rs  welcome.rs
crates/ctl/src/commands/: agent.rs  ai.rs  capability.rs  chain_break.rs  circuit.rs  core.rs  firmware.rs  history.rs  integrations.rs  mesh.rs  mod.rs  module.rs  notify.rs  ops.rs  reconcile.rs  responder.rs  response.rs  rule.rs  setup.rs  status.rs  update.rs
crates/ctl/src/harden/: auditd.rs  mod.rs  services.rs
crates/ctl/tests/: install_classifier_cli.rs
crates/killchain/: Cargo.toml
crates/killchain/src/: bridge.rs  detector.rs  main.rs  redis.rs  tracker.rs
crates/sensor/: Cargo.toml
crates/sensor-ebpf/: Cargo.toml
crates/sensor-ebpf/src/: main.rs
crates/sensor/src/: collector_health.rs  config.rs  detector_set.rs  event_dispatch.rs  lib.rs  main.rs  seccomp.rs
crates/sensor/src/boot/: build_detectors.rs  event_loop.rs  mod.rs
crates/sensor/src/collectors/: ebpf_syscall.rs  fanotify_watch.rs  file_extract.rs  kernel_integrity.rs  mod.rs  proc_maps.rs  proto_http.rs  proto_smb.rs  proto_ssh.rs  systemd_inventory.rs  tcp_stream.rs  tls_fingerprint.rs
crates/sensor/src/detectors/: allowlists.rs  archive_pwd_protected.rs  automated_file_collection.rs  c2_callback.rs  c2_non_standard_port.rs  c2_protocol_tunneling.rs  c2_web_tunnel.rs  clipboard_read.rs  data_exfil_ebpf.rs  discovery_burst.rs  dns_c2.rs  host_drift.rs  kernel_module_load.rs  keylogger_bash_trap.rs  mitre_hunt.rs  mod.rs  proto_anomaly.rs  reverse_shell.rs  rootkit.rs  sandbox_evasion.rs  screen_capture.rs  stego_detect.rs  suspicious_login.rs  yara_scan.rs
crates/sensor/src/event_pipeline/: mod.rs  types.rs
crates/sensor/src/event_pipeline/builtin/: 00-defensive-allowlist.yml  01-self-traffic-suppression.yml  02-service-daemon-suppression.yml  03-package-manager-suppression.yml  99-default-sample.yml
crates/sensor/src/sinks/: mod.rs
crates/shield/: Cargo.toml
crates/shield/src/: api.rs  attack_classifier.rs  bgp_monitor.rs  cloudflare_failover.rs  escalation.rs  ingest.rs  lib.rs  main.rs  origin_lockdown.rs  rate_limiter.rs  store.rs  syn_tracker.rs  tcp_fingerprint.rs  telegram_notify.rs  xdp_manager.rs
docker/: Dockerfile.agent  Dockerfile.agent-openclaw
docs/: prometheus-alerts.yaml
docs/internal/: release-backlog-2026-04-18.md
examples/systemd/: innerwarden-agent.service  innerwarden-sensor.service
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: core_event_json.rs  core_incident_json.rs  tls_client_hello.rs
rules/event_pipeline/: README.md
scripts/: deploy-prod.sh  replay_qa.sh  scenario_qa.sh  setup-wizard.sh  verify-lsm-hooks.sh
testdata/event_pipeline_fixtures/: security-events-must-persist.jsonl
(+51 files in other folders)
