[workspace]
members = [
  "crates/core",
  "crates/sensor",
  "crates/agent",
  "crates/ctl",
  "crates/sensor-ebpf-types",
  "crates/agent-guard",
  "crates/smm",
  "crates/hypervisor",
  "crates/killchain",
  "crates/dna",
  "crates/shield",
]
exclude = ["crates/sensor-ebpf"]
# crates/sensor-ebpf compiles to bpfel-unknown-none target (separate build)
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/InnerWarden/innerwarden"
homepage = "https://www.innerwarden.com"
readme = "README.md"
