[workspace]
members = [
  "crates/core",
  "crates/sensor",
  "crates/agent",
  "crates/ctl",
  "crates/sensor-ebpf-types",
  "crates/agent-guard",
  "crates/smm",
  "crates/hypervisor",
  "crates/killchain",
  "crates/dna",
  "crates/shield",
  "crates/store",
]
exclude = ["crates/sensor-ebpf", "fuzz"]
# crates/sensor-ebpf compiles to bpfel-unknown-none target (separate build).
# fuzz/ is a cargo-fuzz harness that depends on libfuzzer-sys (nightly-only
# when using `cargo fuzz`); keeping it out of the workspace avoids polluting
# stable CI with nightly requirements.
resolver = "2"

[workspace.package]
version = "0.12.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/InnerWarden/innerwarden"
homepage = "https://www.innerwarden.com"
readme = "README.md"
