[package]
name = "innerwarden-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "AI-assisted defense agent with response skills for InnerWarden."
keywords = ["security", "incident-response", "autonomous-defense", "linux", "rust"]
categories = ["command-line-utilities", "network-programming"]

[target.'cfg(not(target_os = "macos"))'.dependencies]
tikv-jemallocator = "0.6"

[dependencies]
innerwarden_core = { path = "../core" }
innerwarden-agent-guard = { path = "../agent-guard" }
innerwarden-mesh = { git = "https://github.com/InnerWarden/innerwarden-mesh.git", rev = "bed851214af56cf658159dd2e7bf04eaf191be3c" }
innerwarden-smm = { path = "../smm" }
innerwarden-hypervisor = { path = "../hypervisor" }
innerwarden-killchain = { path = "../killchain" }
innerwarden-dna = { path = "../dna" }
innerwarden-shield = { path = "../shield" }
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
argon2 = "0.5"
base64 = "0.22"
rpassword = "7"
rand_core = { version = "0.6", features = ["std"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4"
hmac = "0.12"
sha2 = "0.10"
russh = "0.58"
regex = "1"
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8"] }
aes-gcm = "0.10"
hkdf = "0.12"
bytes = "1"

redis = { version = "1.2", features = ["tokio-comp", "aio"], optional = true }
redb = "4"

[features]
default = []
redis-reader = ["redis"]

[dev-dependencies]
tempfile = "3"
