[package]
name = "innerwarden-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "AI-assisted defense agent with response skills for InnerWarden."
keywords = ["security", "incident-response", "autonomous-defense", "linux", "rust"]
categories = ["command-line-utilities", "network-programming"]

[target.'cfg(not(target_os = "macos"))'.dependencies]
# `profiling` compiles the jemalloc heap profiler into the binary; it
# is inert at runtime until `MALLOC_CONF=prof:true,...` is set, so
# there is no steady-state overhead. `unprefixed_malloc_on_supported_platforms`
# is required for `MALLOC_CONF` and the `malloc_conf` weak symbol to
# be picked up by the runtime. See docs/heap-profile.md for the
# on-demand workflow.
tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[dependencies]
innerwarden_core = { path = "../core" }
innerwarden-store = { path = "../store" }
innerwarden-agent-guard = { path = "../agent-guard" }
innerwarden-mesh = { git = "https://github.com/InnerWarden/innerwarden-mesh.git", rev = "bed851214af56cf658159dd2e7bf04eaf191be3c" }
innerwarden-smm = { path = "../smm" }
innerwarden-hypervisor = { path = "../hypervisor" }
innerwarden-killchain = { path = "../killchain" }
innerwarden-dna = { path = "../dna" }
innerwarden-shield = { path = "../shield" }
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
argon2 = "0.5"
base64 = "0.22"
rpassword = "7"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.10"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4"
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde_yaml = "0.9"
russh = "0.60"
regex = "1"
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8"] }
aes-gcm = "0.10"
hkdf = "0.12"
bytes = "1"

# Pure-Rust ONNX inference (no C runtime dependency, slightly slower than ort
# but compiles cleanly on any target and is easier to distribute).
tract-onnx = { version = "0.21", optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
rustls-pki-types = "1"
# Spec 030: warm-tier JSONL compression + atomic rename.
flate2 = "1"
tempfile = "3"

[features]
default = []
# Enables the local ONNX classifier provider. Adds ~50 MB to the binary from
# the ONNX runtime static link plus the tokenizer; off by default so users
# without the classifier model installed don't pay the cost.
local-classifier = ["tract-onnx", "tokenizers"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
filetime = "0.2"
