[package]
name = "innerwarden-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "AI-assisted defense agent with response skills for InnerWarden."
keywords = ["security", "incident-response", "autonomous-defense", "linux", "rust"]
categories = ["command-line-utilities", "network-programming"]

[target.'cfg(not(target_os = "macos"))'.dependencies]
# `profiling` compiles the jemalloc heap profiler into the binary; it
# is inert at runtime until `MALLOC_CONF=prof:true,...` is set, so
# there is no steady-state overhead. `unprefixed_malloc_on_supported_platforms`
# is required for `MALLOC_CONF` and the `malloc_conf` weak symbol to
# be picked up by the runtime. See docs/heap-profile.md for the
# on-demand workflow.
tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

# Wave 9f (AUDIT-009 root): journald sink wired in main.rs when the
# binary runs under systemd (detected via `JOURNAL_STREAM` env var). The
# tracing-subscriber fmt layer writes plain text to stdout which journald
# captures WITHOUT a `PRIORITY=` field, so `journalctl -p warning`
# silently drops every WARN this crate emits. tracing-journald sets
# PRIORITY based on the tracing level via sd_journal_send so operator
# severity filters work as documented.
[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"
# Spec 052 Phase 1b: aya userspace opens the pinned BLOCKED_PIDS map and
# writes PID/TGID entries the kernel LSM hook consults. Aya is Linux-only
# (depends on libc symbols that don't exist on macOS/Windows); the
# `lsm_policy` module stubs to no-ops on non-Linux via cfg.
aya = "0.13"

[dependencies]
innerwarden_core = { path = "../core" }
innerwarden-store = { path = "../store" }
innerwarden-agent-guard = { path = "../agent-guard" }
innerwarden-mesh = { git = "https://github.com/InnerWarden/innerwarden-mesh.git", rev = "bed851214af56cf658159dd2e7bf04eaf191be3c" }
innerwarden-smm = { path = "../smm" }
innerwarden-hypervisor = { path = "../hypervisor" }
innerwarden-killchain = { path = "../killchain" }
innerwarden-dna = { path = "../dna" }
innerwarden-shield = { path = "../shield" }
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
# Spec 036 (I-04 graceful shutdown) — TaskTracker for joinable task
# registration, CancellationToken for cooperative cancel. The "rt"
# feature pulls in `task::TaskTracker`; the default features cover
# `sync::CancellationToken`.
tokio-util = { version = "0.7", features = ["rt"] }
futures-core = "0.3"
# Spec 036 — `FutureExt::catch_unwind` for per-task panic isolation
# in `TaskGroup::spawn`. Used to log the panic via tracing::error!
# with the task name before re-raising (preserves JoinError::is_panic
# for explicit handlers).
futures-util = "0.3"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
argon2 = "0.5"
base64 = "0.22"
rpassword = "7"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.10"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
fs2 = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha2_011 = { package = "sha2", version = "=0.11.0" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde_yaml = "0.9"
russh = "0.61"
regex = "1"
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8"] }
aes-gcm = "0.10"
hkdf = "0.13"
bytes = "1"

# Pure-Rust ONNX inference (no C runtime dependency, slightly slower than ort
# but compiles cleanly on any target and is easier to distribute).
tract-onnx = { version = "0.22", optional = true }
tokenizers = { version = "0.23", default-features = false, features = ["onig"], optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.14"
rustls-pki-types = "1"
# Spec 030: warm-tier JSONL compression + atomic rename.
flate2 = "1"
tempfile = "3"

# Spec 035 PR-A2: DHAT heap profiler, only pulled in under the
# `dhat-heap` feature (see [features] below). Replaces the global
# allocator when enabled; must never ship in a production build.
dhat = { version = "0.3", optional = true }

[features]
default = []
# Enables the local ONNX classifier provider. Adds ~50 MB to the binary from
# the ONNX runtime static link plus the tokenizer; off by default so users
# without the classifier model installed don't pay the cost.
local-classifier = ["tract-onnx", "tokenizers"]
# Spec 035 PR-A2: swaps the global allocator to DHAT's heap profiler
# for memory-budget tests. DHAT instruments every allocation and is
# substantially slower than jemalloc; this feature MUST NOT be enabled
# for production builds. The two `#[global_allocator]` statics in
# `main.rs` are cfg-gated so that enabling this feature disables the
# jemalloc allocator on Linux — Rust's "duplicate lang item" error is
# the last-line compile-time guarantee that the two allocators cannot
# be linked simultaneously. Invoke via
# `cargo test -p innerwarden-agent --features dhat-heap ...`.
dhat-heap = ["dep:dhat"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
filetime = "0.2"
# Spec 038 Phase 1: mock the spoke `/api/status` endpoint in fleet
# poller unit tests. Async-aware fork (mockito 1.x).
mockito = "1"
