[package]
name = "innerwarden-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "InnerWarden control plane - manage capabilities and system configuration."
keywords = ["security", "linux", "capabilities", "rust"]
categories = ["command-line-utilities"]

[[bin]]
name = "innerwarden-ctl"
path = "src/main.rs"

[dependencies]
innerwarden-agent-guard = { path = "../agent-guard" }
innerwarden-smm = { path = "../smm" }
innerwarden-hypervisor = { path = "../hypervisor" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tempfile = "3"
toml_edit = "0.22"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock"], default-features = false }
sha2 = { version = "0.10", features = ["std"] }
digest = "0.10"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }
innerwarden_core = { path = "../core" }
qrcode = { version = "0.14", default-features = false }
