[package]
name = "innerwarden-killchain"
version.workspace = true
edition.workspace = true
license = "BUSL-1.1"
repository.workspace = true
homepage.workspace = true
description = "Kill chain detection engine — detects attack patterns from eBPF events via bitmask tracking"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1"
