[package]
name = "innerwarden-sensor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Deterministic threat detection sensor for InnerWarden - a self-defending security agent."
keywords = ["security", "intrusion-detection", "linux", "host-security", "rust"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
innerwarden_core = { path = "../core" }
innerwarden-store = { path = "../store" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Structural command analysis (AST) for execution-guard detector
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
dns-lookup = "2"
flate2 = "1"
# eBPF support (Linux only, optional - graceful fallback when not available)
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }
libc = "0.2"
ureq = "3"

[features]
default = []
ebpf = ["aya", "aya-log"]
ebpf-embedded = ["ebpf"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
serde_yaml = "0.9"
glob = "0.3"
