[package]
name = "innerwarden-shield"
version.workspace = true
edition.workspace = true
license = "Proprietary"
repository.workspace = true
homepage.workspace = true
description = "DDoS protection — adaptive rate limiting, SYN tracking, auto-escalation, Cloudflare failover"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Binary-only deps (for standalone daemon)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", features = ["json"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
daemon = ["tokio", "axum", "clap", "tracing-subscriber", "tower-http"]

[[bin]]
name = "innerwarden-shield"
required-features = ["daemon"]
